--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services :
       - "5432:5432" 
     volumes: 
       - pgdata:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d
+
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U netflix_user -d netflix_db"]
+      test: ["CMD-SHELL"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -21,7 +23,54 @@ services :
         - sales_network 
     
 volumes:
+  pgdata:services:
+  sales_db:
+    image: postgres:16-alpine
+    container_name: sales_db
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: root123
+      POSTGRES_DB: sales_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    networks:
+      - sales_network
+
+  api:
+    build: .
+    container_name: sales_api
+    depends_on:
+      sales_db:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://admin:root123@sales_db:5432/sales_db
+      SECRET_KEY: super-secret-key
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 30
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+    restart: unless-stopped
+    networks:
+      - sales_network
+
+volumes:
   pgdata:
+
+networks:
+  sales_network:
+    driver: bridge
+    name: sales_network
+
 
 networks:
   sales_network:
