--- a/.gitignore
+++ b/.gitignore
@@ -61,12 +61,6 @@ docker-data/
 pgdata/
 
 # =====================================================
-# Database dumps
-# =====================================================
-*.sql
-*.dump
-
-# =====================================================
 # Node / Frontend (au cas où plus tard)
 # =====================================================
 node_modules/
@@ -75,3 +69,10 @@ node_modules/
 # FastAPI / Uvicorn
 # =====================================================
 *.pid
+
+
+
+
+# Tests
+tests/
+pytest.ini
